[package]
name = "miflora"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "=0.9.1", features = ["serde"] }
tokio = { version = "=1.15.0", features = ["full"] }
futures = { version = "=0.3.19" }